fix: 이 action에 issue write 권한 추가

--- a/.github/workflows/pr-cicd.yml
+++ b/.github/workflows/pr-cicd.yml
@@ -12,6 +12,7 @@ jobs:
     permissions:
       contents: read
       pull-requests: write
+      issues: write
 
     steps:
       - name: 레퍼지토리 체크아웃
